# c_chat

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build_rpm.sh
rpm/: cchat.spec
spec/: cchat.spec
src/: client.c  client.h  common.c  common.h  main.c  server.c  server.h  termin.c  termin.h
